<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="horizontal">


    <com.rent.zona.commponent.pickerwheel.wheel.WheelView
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:tag="@string/tag_year"/>

    <com.rent.zona.commponent.pickerwheel.wheel.WheelView
        android:id="@+id/month"
        android:tag="@string/tag_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"/>

    <com.rent.zona.commponent.pickerwheel.wheel.WheelView
        android:id="@+id/day"
        android:tag="@string/tag_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"/>

    <com.rent.zona.commponent.pickerwheel.wheel.WheelView
        android:id="@+id/hour"
        android:layout_width="0dp"
        android:tag="@string/tag_hour"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"/>

   <com.rent.zona.commponent.pickerwheel.wheel.WheelView
        android:id="@+id/minute"
        android:layout_width="0dp"
        android:tag="@string/tag_minute"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"/>
</LinearLayout>